kubernetes/apps/services/syncthing/service-gui.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-gui
spec:
  selector:
    app: syncthing
  ports:
    - port: 8384
      targetPort: 8384
